--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "engines": {
+    "node": "12.x"
+  },
   "scripts": {
     "start": "node index.js"
   },
@@ -17,7 +20,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.12.9",
     "morgan": "^1.10.0",
-    "multer": "^1.4.4",
+    "multer": "^1.4.2",
     "nodemon": "^2.0.7",
     "path": "^0.12.7"
   }
